--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^9.0.0-alpha.8",
     "gsap": "^3.12.7",
+    "lenis": "^1.1.20",
+    "maath": "^0.10.8",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
