--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-tweet": "^3.2.2",
     "slugify": "^1.6.6",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
