--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "posthog-js": "^1.255.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-tweet": "^3.2.2",
     "slugify": "^1.6.6",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.173.0"
