--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "posthog-js": "^1.255.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-tweet": "^3.2.2",
