--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.475.0",
     "maath": "^0.10.8",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "posthog-js": "^1.255.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
