--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.15.0",
     "gsap": "^3.12.7",
     "lenis": "^1.1.20",
     "lucide-react": "^0.475.0",
